bppackaging/src/objects/Kit_Transaction_Type_Junction__c.object
<CustomObject>
    <description>Junction Object for Kit Header and Transaction type objects</description>
    <fields>
        <fullName>Kit_Header__c</fullName>
        <label>Kit Header</label>
        <referenceTo>Kit_Header__c</referenceTo>
        <relationshipLabel>Kit Transaction Type Junctions</relationshipLabel>
        <relationshipName>Kit_Transaction_Type_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <referenceTo>Transaction_Type__c</referenceTo>
        <relationshipLabel>Kit Transaction Type Junctions</relationshipLabel>
        <relationshipName>Kit_Transaction_Type_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Kit Transaction Type Junction</label>
    <nameField>
        <displayFormat>KTT-{000000000}</displayFormat>
        <label>Kit Transaction Type Junction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kit Transaction Type Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>